@@ -30,7 +30,6 @@ import java.io.InputStream;
 import java.io.OutputStream;
 import java.nio.file.FileAlreadyExistsException;
 import java.nio.file.Files;
-import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.HashMap;
@@ -61,7 +60,7 @@ public class TestKryo {
   @BeforeTest
   public void init() throws IOException {
     try {
-      Files.createDirectories(Path.of("target/kryo"));
+      Files.createDirectories(Paths.get("target/kryo"));
     } catch (FileAlreadyExistsException caught) {
       // No-op
     }
